<resources>
    <string name="app_name">Casos de Covid-19</string>
    <string name="tab_text1">Suspeitos</string>
    <string name="tab_text2">Confirmados</string>
    <string name="tab_text3">Recuperados</string>
    <string name="username">Utilizador</string>
    <string name="password">Palavra-passe</string>
    <string name="login">Entrar</string>
    <string name="register">Registar</string>
    <string name="confirm_password">Confirmar Passe</string>
    <string name="underline_register"><u>Registar</u></string>
    <string name="login_error">Erro a Entrar!</string>
    <string name="login_success">Entrada com Sucesso!</string>
    <string name="register_success">Registo com Sucesso!</string>
    <string name="register_error">Erro a Registar!</string>
    <string name="password_doesnt_match">Palavra-passe não condiz!</string>
    <string name="world">Mundo:</string>
</resources>